--- a/environment.yaml
+++ b/environment.yaml
@@ -7,5 +7,6 @@ dependencies:
   - dash=2.1.0
   - plotly=5.5.0
   - pandas=1.4.0
+  - dash_bootstrap_components=1.0.3
   - pip:
     - python-dotenv
